fix autocomplete being invisible

--- a/AlanWalkerTheme/old/ConsistantChatbar.css
+++ b/AlanWalkerTheme/old/ConsistantChatbar.css
@@ -93,7 +93,6 @@ html:not(.visual-refresh-chat-input) {
   .channelTextArea_f75fb0 {
     margin-bottom: 0;
     border-radius: var(--border-radius-0);
-    overflow: hidden;
     height: fit-content;
     border: 0;
   
